# cliente

./: pyproject.toml
cliente/: settings.py  urls.py
cliente/core/: apps.py  models.py  serializers.py  views.py
cliente/core/migrations/: 0001_initial.py
